--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,9 @@ target 'FromMe' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   
+  pod 'Firebase/Core', '~> 6.2.0'
+  pod 'Firebase/Messaging', '~> 6.2.0'
+  
   target 'FromMeTests' do
     inherit! :search_paths
     # Pods for testing
