--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.0",
+    "@react-native-community/datetimepicker": "^2.2.2",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/compat": "^5.0.5",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/native-stack": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-modal": "^11.5.4",
+    "react-native-modal-datetime-picker": "^8.2.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-screen": "^1.4.0",
     "react-native-safe-area-context": "^0.7.3",
