--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
           <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
       </receiver>
+      <meta-data
+      android:name="com.google.firebase.messaging.default_notification_channel_id"
+      android:value="@string/default_notification_channel_id"/>
     </application>
 
 </manifest>
