--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,18 +24,12 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-      <receiver android:name="io.invertase.firebase.notifications.RNFirebaseNotificationReceiver"/>
-      <receiver android:enabled="true" android:exported="true"  android:name="io.invertase.firebase.notifications.RNFirebaseNotificationsRebootReceiver">
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
         <intent-filter>
-          <action android:name="android.intent.action.BOOT_COMPLETED"/>
-          <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
-          <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
-          <category android:name="android.intent.category.DEFAULT" />
+          <action android:name="com.google.firebase.MESSAGING_EVENT" />
         </intent-filter>
-      </receiver>
-      <meta-data
-      android:name="com.google.firebase.messaging.default_notification_channel_id"
-      android:value="@string/default_notification_channel_id"/>
+      </service>
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
     </application>
 
 </manifest>
