--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.2.2",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/push-notification-ios": "^1.0.6",
     "@react-navigation/compat": "^5.0.5",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/native-stack": "^5.0.5",
@@ -23,6 +24,7 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-modal": "^11.5.4",
     "react-native-modal-datetime-picker": "^8.2.0",
+    "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-screen": "^1.4.0",
     "react-native-safe-area-context": "^0.7.3",
